k8s/deploym.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploym
spec:
  replicas: 4
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: jenk-lap
          image: nginx
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 8090
  strategy:
    type: RollingUpdate
