k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploym
spec:
  selector:
    app: python
  ports:
  - port: 8090
    targetPort: 8090
